// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSignatureSuccessful should render 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Created
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-signed-banner-dark-green.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction was successfully created. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
    </p>
    <div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionType"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            Transaction Type
          </div>
          <div
            class="font-semibold"
          >
            Transfer
          </div>
        </div>
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-text border-theme-text dark:text-theme-secondary-600 dark:border-theme-secondary-600 ring-theme-background"
        >
          <div
            class="sc-bdnxRM NjstW"
            height="20"
            width="20"
          >
            <svg>
              transfer.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionNetwork"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            Cryptoasset
          </div>
          <div
            class="font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-bdnxRM NjstW"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionSender"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            Sender
          </div>
          <div
            class="font-semibold"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex items-center -space-x-2"
        >
          <div
            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
      </div>
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`MultiSignatureSuccessful should render with delegate wallet 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Created
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-signed-banner-dark-green.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      Your transaction was successfully created. Participants can now sign the transaction to broadcast it to the network. The following is relevant information for your transaction:
    </p>
    <div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionType"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            Transaction Type
          </div>
          <div
            class="font-semibold"
          >
            Transfer
          </div>
        </div>
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-text border-theme-text dark:text-theme-secondary-600 dark:border-theme-secondary-600 ring-theme-background"
        >
          <div
            class="sc-bdnxRM NjstW"
            height="20"
            width="20"
          >
            <svg>
              transfer.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionNetwork"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            Cryptoasset
          </div>
          <div
            class="font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-bdnxRM NjstW"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
        data-testid="TransactionSender"
      >
        <div
          class="flex-1 space-y-2 w-40 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            Sender
          </div>
          <div
            class="font-semibold"
          >
            <div
              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
            >
              <span
                class="font-semibold text-base text-theme-text"
                data-testid="Address__alias"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex items-center -space-x-2"
        >
          <div
            class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                delegate-registration.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
      </div>
      <div />
    </div>
  </section>
</DocumentFragment>
`;
